fix(gkavatar): z-index not working properly

--- a/gkavatar/2021/styles.css
+++ b/gkavatar/2021/styles.css
@@ -34,6 +34,7 @@ body {
 }
 .style__bg-blur { will-change: filter; }
 .style__fg {
+  position: relative;
   z-index: -1;
 }
 #styles-container img { width: 100%; height: 100%; }
